<resources>
    <string name="app_name">ImageStreamGangApp</string>
    <string name="add_urls">Add URLs</string>
    <string name="run_default_urls">Default</string>
    <string name="url_prompt">List of URLs separated by commas</string>
    <string name="run_user_urls">Run</string>
    <string name="go_back">Go Back</string>
    <string name="img_desc">A Large View</string>
    <string name="clear_dirs">Clear Downloads</string>
    <string name="clear_lists">Clear Lists</string>
    <string name="ok_button">OK</string>
    <string name="sequential">Sequential</string>
    <string name="parallel">Parallel</string>
    <string name="default_button">Default</string>
    <string name="default_local_button">Default (local)</string>
    <string name="completablefuture1">CompletableFuture1</string>
    <string name="completablefuture2">CompletableFuture2</string>
</resources>
